cognito-alb-blog/sample_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sample
  name: sample-ui
  labels:
    app: sample-ui
    tier: frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: sample-ui
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sample
  name: sample-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-ui
      tier: frontend
  template:
    metadata:
      labels:
        app: sample-ui
        tier: frontend
    spec:
      containers:
        - name: sample-ui
          image: IMAGE_URI
          ports:
            - containerPort: 80
---
